# marketmind-daily-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: market-brief.yml
scripts/: run-daily-market-monitor.cmd  run-daily-market-monitor.ps1  send_market_brief.py
src/marketmind_api/: runtime.py
src/marketmind_api/core/: config.py
src/marketmind_api/scripts/: run_daily_market_monitor.py
src/marketmind_api/services/: binance.py  daily_market_monitor.py
